force-app/main/default/objects/SVMXC__Parts_Request__c/SVMXC__Parts_Request__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>This object is used to capture part requests made from field engineers to other field engineers/warehouses/suppliers, and from warehouses to suppliers. Parts requests do not have the context of a service event.</description>
    <label>Parts Request</label>
    <nameField>
        <displayFormat>PRQ-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parts Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>