force-app/main/default/objects/SVMXC__Parts_Request__c/fields/SVMX_PS_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>SVMXC__Service_Order__c</referenceTo>
    <relationshipLabel>Parts Requests</relationshipLabel>
    <relationshipName>Parts_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>