force-app/main/default/objects/SVMXC__Parts_Request__c/fields/SVMXC__Company__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the supplier company. Applicable for replenishing stock at warehouse locations. Lookup to an existing salesforce account record.</description>
    <inlineHelpText>Name of the supplier company. Applicable for replenishing stock at warehouse locations. Lookup to an existing salesforce account record.</inlineHelpText>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Parts_Request</relationshipName>
    <type>Lookup</type>
</CustomField>