force-app/main/default/objects/SVMXC__Parts_Request__c/fields/SVMXC__Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Account, set by trigger.</description>
    <inlineHelpText>Lookup to Partner Account.</inlineHelpText>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Parts Requests (Partner Account)</relationshipLabel>
    <relationshipName>Parts_Request_Partner</relationshipName>
    <type>Lookup</type>
</CustomField>