force-app/main/default/objects/SVMXC__Parts_Request__c/fields/SVMXC__Required_At_Location__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Required_At_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Location where stock is required. This is a lookup to an existing site record.</description>
    <inlineHelpText>Location where stock is required. This is a lookup to an existing site record.</inlineHelpText>
    <label>Required At Location</label>
    <referenceTo>SVMXC__Site__c</referenceTo>
    <relationshipName>Parts_Request_To</relationshipName>
    <type>Lookup</type>
</CustomField>