force-app/main/default/objects/SVMXC__Parts_Request__c/fields/SVMXC__Status__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Status__c</fullName>
    <description>Current status of parts request.</description>
    <inlineHelpText>Current status of parts request.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>