force-app/main/default/objects/SVMXC__Parts_Request__c/validationRules/SVMXC__SVMXC_ValidateLocationsAreSame.validationRule-meta.xml
<ValidationRule>
    <fullName>SVMXC__SVMXC_ValidateLocationsAreSame</fullName>
    <active>true</active>
    <description>From and To locations cannot be the same.</description>
    <errorConditionFormula>(SVMXC__Requested_From__c =  SVMXC__Required_At_Location__c)</errorConditionFormula>
    <errorDisplayField>SVMXC__Requested_From__c</errorDisplayField>
    <errorMessage>Requested From location cannot be the same as Required At Location.</errorMessage>
</ValidationRule>