force-app/main/default/objects/SVMXC__Parts_Request__c/validationRules/SVMXC__SVMXC_ValidateRequestedFromStockable1.validationRule-meta.xml
<ValidationRule>
    <fullName>SVMXC__SVMXC_ValidateRequestedFromStockable1</fullName>
    <active>true</active>
    <description>Requested From should be a stockable location if Supplier name is not entered.</description>
    <errorConditionFormula>AND(SVMXC__Company__c = &quot;&quot;, SVMXC__Requested_From__r.SVMXC__Stocking_Location__c = FALSE)</errorConditionFormula>
    <errorDisplayField>SVMXC__Requested_From__c</errorDisplayField>
    <errorMessage>Requested From should be a stockable location if Supplier name is not entered.</errorMessage>
</ValidationRule>