force-app/main/default/objects/SVMXC__Parts_Request__c/validationRules/SVMXC__SVMXC_ValidateRequestedFromStockable2.validationRule-meta.xml
<ValidationRule>
    <fullName>SVMXC__SVMXC_ValidateRequestedFromStockable2</fullName>
    <active>true</active>
    <description>Requested From should not be a stockable location if supplier name is provided</description>
    <errorConditionFormula>AND(SVMXC__Company__c &lt;&gt; &quot;&quot;, SVMXC__Requested_From__r.SVMXC__Stocking_Location__c = TRUE)</errorConditionFormula>
    <errorDisplayField>SVMXC__Requested_From__c</errorDisplayField>
    <errorMessage>Requested From should be a non-stockable location when supplier name is entered.</errorMessage>
</ValidationRule>