force-app/main/default/objects/SVMXC__Parts_Request__c/validationRules/SVMXC__SVMXC_ValidateRequiredAtStockable.validationRule-meta.xml
<ValidationRule>
    <fullName>SVMXC__SVMXC_ValidateRequiredAtStockable</fullName>
    <active>true</active>
    <description>Required At should be a stockable location</description>
    <errorConditionFormula>( SVMXC__Required_At_Location__r.SVMXC__Stocking_Location__c = FALSE)</errorConditionFormula>
    <errorDisplayField>SVMXC__Required_At_Location__c</errorDisplayField>
    <errorMessage>Required At is not a stockable location. Please select a stockable location.</errorMessage>
</ValidationRule>