force-app/main/default/objects/SVMXC__Parts_Request__c/listViews/SVMXC__All_Parts_Requests.listView-meta.xml
<ListView>
    <fullName>SVMXC__All_Parts_Requests</fullName>
    <columns>NAME</columns>
    <columns>SVMXC__Requested_From__c</columns>
    <columns>SVMXC__Company__c</columns>
    <columns>SVMXC__Required_At_Location__c</columns>
    <columns>SVMXC__Status__c</columns>
    <columns>SVMXC__Total_Amount__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Parts Requests</label>
    <language>en_US</language>
</ListView>